[gd_scene load_steps=2 format=3 uid="uid://b8m3n5p7q9rst"]

[ext_resource type="Script" path="res://systems/goap/debug/ui/panels/timeline_viewer.gd" id="1_timeline"]

[node name="TimelineViewer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
script = ExtResource("1_timeline")

[node name="HeaderContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderMedium"
text = "Timeline Viewer"

[node name="RefreshButton" type="Button" parent="HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Refresh"

[node name="ClearButton" type="Button" parent="HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear"

[node name="ControlsContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TimeRangeContainer" type="HBoxContainer" parent="ControlsContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TimeRangeLabel" type="Label" parent="ControlsContainer/TimeRangeContainer"]
layout_mode = 2
text = "Time Range:"
vertical_alignment = 1

[node name="TimeStartInput" type="SpinBox" parent="ControlsContainer/TimeRangeContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.0
max_value = 10000.0
step = 0.1
suffix = "s"

[node name="TimeEndInput" type="SpinBox" parent="ControlsContainer/TimeRangeContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10000.0
step = 0.1
value = 60.0
suffix = "s"

[node name="AutoRangeButton" type="Button" parent="ControlsContainer/TimeRangeContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Auto"

[node name="ZoomContainer" type="HBoxContainer" parent="ControlsContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ZoomLabel" type="Label" parent="ControlsContainer/ZoomContainer"]
layout_mode = 2
text = "Zoom:"
vertical_alignment = 1

[node name="ZoomSlider" type="HSlider" parent="ControlsContainer/ZoomContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
min_value = 1.0
max_value = 50.0
step = 1.0
value = 10.0

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="TimelineCanvas" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
